--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class=" header__links-list-item_no-bullit">
-            <a class="header__link_active header__link-text">главная</a>
+            <a class="header__link link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link header__link-text">посмотреть лоты</a>
+            <a class="header__link">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link header__link-text">об аукционе</a>
+            <a class="header__link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -28,17 +28,17 @@
         <img class="header__logo-image" src="images/logo-black.svg" alt="ОНО ТЕБЕ НАДО">
       </a>
       <address class="address header__address">
-        <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="header__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
+        <a class="address-block__item header__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-block__item header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address-block__item header__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
       <section class="cover">
           <h1 class="cover_title letter-spacing-extended">
-            <span class="accent-span text-left">ОНО</span>
-            <span class="accent-span text-center">ТЕБЕ</span>
-            <span class="accent-span text-right">НАД<span class="no-letter-spacing">O</span></span>
+            <span class="accent-span text-left">оно</span>
+            <span class="accent-span text-center">тебе</span>
+            <span class="accent-span text-right">над<span class="no-letter-spacing">о</span></span>
           </h1>
           <div class="cover__description">
             <p class="cover__description-text ">
@@ -112,13 +112,11 @@
       </section>
 
       <section class="about">
-        <div>
-          <div class="about__logo">
-            <img class="about__logo-image" src="images/logo-white.svg" alt="ОНО ТЕБЕ НАДО">
-          </div>
+        <div class="about__logo">
+          <img class="about__logo-image" src="images/logo-white.svg" alt="ОНО ТЕБЕ НАДО">
         </div>
-
-        <div class="about__column">
+        
+        <article class="about__column">
           <h2 class="about__title">
             Об аукционе
           </h2>
@@ -138,26 +136,26 @@
               верить их создатели. И сейчас эти лоты стали культовыми. 
             </p>
           </div>
-        </div>
+        </article>
       </section>
     </main>
 
     <footer class="footer">
       <address class="address">
-        <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="footer__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
+        <a class="address-block__item header__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-block__item header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address-block__item footer__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link_active footer__menu-link-text">главная</a>
+            <a class="footer__menu-link link_active">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link-text">посмотреть лоты</a>
+            <a class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link-text">об аукционе</a>
+            <a class="footer__menu-link">об аукционе</a>
           </li>
         </ul>
       </nav>
