address and navigation semantics fixed

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class=" header__links-list-item_no-bullit">
-            <a class="header__link link_active">главная</a>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="navigation-block__text navigation_and_address__link link_active">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link">посмотреть лоты</a>
+            <a class="navigation-block__text navigation_and_address__link">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link">об аукционе</a>
+            <a class="navigation-block__text navigation_and_address__link">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -28,9 +28,11 @@
         <img class="header__logo-image" src="images/logo-black.svg" alt="ОНО ТЕБЕ НАДО">
       </a>
       <address class="address header__address">
-        <a class="address-block__item header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address-block__item header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address-block__item header__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
+        <a class="address-block__text navigation_and_address__link" 
+        href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-block__text navigation_and_address__link" 
+        href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address-block__text header__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -106,7 +108,7 @@
             </a>
           </li> 
         </ul>
-        <a href="0" class="lots__look-more-link">
+        <a href="0" class="lots__look-more-link" target="_blank">
           посмотреть больше
         </a>
       </section>
@@ -142,37 +144,37 @@
 
     <footer class="footer">
       <address class="address">
-        <a class="address-block__item header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="address-block__item header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address-block__item footer__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
+        <a class="address-block__text navigation_and_address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-block__text navigation_and_address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address-block__text footer__adress-location">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link link_active">главная</a>
+            <a class="navigation-block__text navigation_and_address__link link_active">главная</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">посмотреть лоты</a>
+            <a class="navigation-block__text navigation_and_address__link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">об аукционе</a>
+            <a class="navigation-block__text navigation_and_address__link">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="0">
-              <img src="images/yt.svg" class="footer__social-icon" alt="YouTube">
+              <img src="images/yt.svg" class="footer__social-icon" alt="YouTube" target="_blank">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="0">
-              <img src="images/vk.svg" class="footer__social-icon" alt="VK">
+              <img src="images/vk.svg" class="footer__social-icon" alt="VK" target="_blank">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="0">
-              <img src="images/pinterest.svg" class="footer__social-icon" alt="Pinterest">
+              <img src="images/pinterest.svg" class="footer__social-icon" alt="Pinterest" target="_blank">
             </a>
           </li>
         </ul>
