--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
       <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="0">
-              <img src="images/yt.svg" class="footer__social-icon" alt="YouTube" target="_blank">
+              <img src="images/yt.svg" class="footer__social-icon" alt="YouTube">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="0">
-              <img src="images/vk.svg" class="footer__social-icon" alt="VK" target="_blank">
+              <img src="images/vk.svg" class="footer__social-icon" alt="VK">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="0">
-              <img src="images/pinterest.svg" class="footer__social-icon" alt="Pinterest" target="_blank">
+              <img src="images/pinterest.svg" class="footer__social-icon" alt="Pinterest">
             </a>
           </li>
         </ul>
